<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sherlock</string>
    <string name="action_upload">Upload</string>
    <string name="no_person">NO PERSON!</string>
    <string name="no_location">NO LOCATION!</string>
    <string name="search_hint">Search…</string>
    <string name="action_new_person">New person</string>
    <string name="edit_person">Edit person</string>
    <string name="action_delete_person">Delete this person</string>
    <string name="add_location">Add location</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="for_sth">for %1s</string>
    <string name="detect_current_location">Detect current location</string>
    <string name="cancel_detect">Cancel detect</string>
    <string name="cannot_detect_current_location">Cannot detect current location. Please check your Location access in Settings of device.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="num_location">%1d location(s)</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="basic_information">Basic information</string>
    <string name="location_history">Location history</string>
    <string name="photo_of_location">Photo of location</string>
    <string name="are_you_sure_to_delete_this_location">Are you sure to delete this location?</string>
    <string name="are_you_sure_to_delete_this_person">Are you sure to delete this person?</string>
    <string name="name_desc_not_blank">• Name/description must not be blank.</string>
    <string name="note_not_blank">• Note must not be blank.</string>
    <string name="datetime_in_valid_format">• Date time must be in valid format.</string>
    <string name="fullname_not_blank">• Full name must not be blank.</string>
    <string name="height_not_blank">• Height must not be blank.</string>
    <string name="height_float_number">• Height must be a positive real number.</string>
    <string name="age_min_not_blank">• Min age must not be blank.</string>
    <string name="age_max_not_blank">• Max age must not be blank.</string>
    <string name="age_min_integer_number">• Min age must be a positive integer number.</string>
    <string name="age_max_integer_number">• Max age must be a positive integer number.</string>
    <string name="age_min_max">• Min age must not be greater than max age.</string>
    <string name="gender">Gender</string>
    <string name="age_range">Age range</string>
    <string name="height">Height</string>
    <string name="height_cm">Height (cm)</string>
    <string name="hair_color">Hair color</string>
    <string name="no_comment">(No comment)</string>
    <string name="comment">Comment</string>
    <string name="unknown">Unknown</string>
    <string name="cm">cm</string>
    <string name="title_activity_person">Person detail</string>
    <string name="title_activity_new_person">New person</string>
    <string name="title_activity_new_location">New location</string>
    <string name="title_activity_edit_location">Edit location</string>
    <string name="title_activity_location">Location detail</string>
    <string name="title_activity_upload">Upload</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="url_service">URL of the web service</string>
    <string name="upload_status">Uploading %1d people to server.</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="sth_wrong">Something went wrong.</string>
    <string name="please_enter_url">Please enter URL of the web service.</string>
    <string name="cannot_upload">Cannot upload because the person list is empty.</string>
    <string name="server_response_not_valid">Response message from server is not valid format.</string>
    <string name="leave_blank_to_use_current_time">Leave blank to use current time</string>
    <string name="time_format">Date time (MM/dd/yyyy HH:mm)</string>
    <string name="note_about_the_location">Note about the location</string>
    <string name="desc_of_location">Name/description of location</string>
    
    <string name="full_name">Full name</string>
    <string name="required">Required</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="optional">Optional</string>
    
    
    <string name="title_menu_context">Context</string>
    <string name="item_view">View</string>
    <string name="item_edit">Edit</string>
    <string name="item_delete">Delete</string>
    <string name="item_add_location">Add location</string>
    
</resources>