<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UploadActivity" >
    
    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/url_service"
        android:inputType="textUri"
        android:text="kata.22web.org/admd/" />

    <ProgressBar
        android:id="@+id/progressBarUpload"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUrl"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewUploadStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/progressBarUpload"
        android:textSize="15sp"
        android:layout_marginTop="5sp"
        android:text="@string/upload_status" />

    <Button
        android:id="@+id/buttonStartUpload"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUploadStatus"
        android:layout_toLeftOf="@+id/buttonCloseUpload"
        android:text="@string/start" />
    
    <Button
        android:id="@+id/buttonCloseUpload"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewUploadStatus"
        android:layout_alignTop="@+id/buttonStartUpload"
        android:text="@string/close" />

    


</RelativeLayout>
