<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <ImageButton
                android:id="@+id/imageButtonEditPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_action_edit"
                android:contentDescription="@string/edit_person" />

            <TextView
                android:id="@+id/textViewFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/imageButtonEditPerson"
                android:layout_marginBottom="20sp"
                android:text="[Bui Van Nghia]"
                android:textSize="24sp" />
            
            <!-- =============================================================== -->
            
            <TextView
                android:id="@+id/textViewGenderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="50sp"
                android:layout_below="@id/textViewFullName"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/gender" />
            
            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textViewGenderLabel"
                android:layout_toRightOf="@id/textViewGenderLabel"
                android:textSize="18sp"
                android:text="[Male]" />
            
            <!-- =============================================================== -->
            
            <TextView
                android:id="@+id/textViewAgeRangeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textViewGenderLabel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/age_range" />
            
            <TextView
                android:id="@+id/textViewAgeRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textViewAgeRangeLabel"
                android:layout_alignLeft="@id/textViewGender"
                android:textSize="18sp"
                android:text="[40-50]" />
            
            <!-- =============================================================== -->
            
            <TextView
                android:id="@+id/textViewHeightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textViewAgeRangeLabel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/height" />
            
            <TextView
                android:id="@+id/textViewHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textViewHeightLabel"
                android:layout_alignLeft="@id/textViewGender"
                android:text="[168]"
                android:textSize="18sp" />
            
            <!-- =============================================================== -->
            
            <TextView
                android:id="@+id/textViewHairColorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textViewHeightLabel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/hair_color" />
            
            <TextView
                android:id="@+id/textViewHairColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textViewHairColorLabel"
                android:layout_alignLeft="@id/textViewGender"
                android:textSize="18sp"
                android:text="[Yellow]" />
            
            <!-- =============================================================== -->
            
            <TextView
                android:id="@+id/textViewCommentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textViewHairColorLabel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20sp"
                android:text="@string/comment" />
            
            <TextView
                android:id="@+id/textViewComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewCommentLabel"
                android:layout_alignParentLeft="true"
                
                android:layout_marginLeft="20sp"
                android:textSize="18sp"
                android:text="[This is comment]" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewHeight"
                android:layout_alignBottom="@+id/textViewHeight"
                android:layout_toRightOf="@+id/textViewHeight"
                android:text="@string/cm"
                android:textSize="18sp" />
            
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>